# Nova-Forge

./: .clang-format  .gitignore  .npmrc  AUTONOMOUS_DEVELOPMENT_GUIDE.md  AUTONOMOUS_DEVELOPMENT_GUIDE2.md  AUTONOMOUS_DEVELOPMENT_REPORT.md  AUTONOMOUS_GUIDE_SUMMARY.md  CMakeLists.txt  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETION_CERTIFICATE.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEVELOPER_ONBOARDING.md  DEVELOPMENT_GUIDE.md  FINAL_PROJECT_STATUS.md  IMPLEMENTATION_SUMMARY.md  LEGAL.md  LICENSE  NEXUSNOVA_ENGINE_ULTIMATE_BLUEPRINT.md  NOVACORE_COMPLETE_DOCUMENTATION.md  NOVACORE_ENGINE_COMPLETE_BLUEPRINT.md  NOVAFORGE_NOVACORE_ENGINE_BLUEPRINT.md  NewIdeasForPlans.md  PRODUCTION_READY_SUMMARY.md  PROGRESS.md  QUICK_START_GUIDE.md  README.md  SECURITY_AUDIT.md  SELF_LEARNING_AND_TRAINING_GUIDE.md  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json  typedoc.json
.github/workflows/: ci.yml
.husky/: commit-msg  pre-commit
_codeql_build_dir/: DartConfiguration.tcl
_codeql_build_dir/include/nova/core/: config.hpp
_codeql_build_dir/tests/: nova_tests
cmake/: NovaCoreConfig.cmake.in  android.toolchain.cmake  nova_config.hpp.in
docs/: ANDROID_TERMUX_SETUP.md  EDITOR_AND_GAME_BUILDER_GUIDE.md  NOVACORE_COMPLETE_DOCUMENTATION.md  PR33_COMPLETION_SUMMARY.md  PROGRESS.md  README.md  SELF_LEARNING_AND_TRAINING_GUIDE.md  TECHNICAL_README.md  TECHNOLOGY_ANALYSIS.md
docs/tutorials/: 01-getting-started.md
examples/01-hello-cube/: index.html
include/nova/api/: api.hpp  api_engine.hpp  api_platform.hpp  api_security.hpp  api_services.hpp  api_types.hpp
include/nova/core/animation/: animation.hpp  animation_system.hpp  animation_types.hpp
include/nova/core/audio/: audio.hpp  audio_system.hpp  audio_types.hpp
include/nova/core/ecs/: archetype.hpp  ecs.hpp  (+5 more)
include/nova/editor/: editor.hpp  editor_command.hpp  editor_context.hpp  editor_gizmo.hpp  editor_panel.hpp  editor_types.hpp
include/nova/platform/: application.hpp  platform.hpp  platform_types.hpp  window.hpp
legal/: COMPLIANCE_CHECKLIST.md  FAQ.md  OWNERSHIP_STRUCTURE.md  README.md
oldprojectbackup/: .env.example  .eslintignore  .gitignore  .npmrc  .prettierignore  AUTONOMOUS_DEVELOPMENT_GUIDE2.md  AUTONOMOUS_DEVELOPMENT_GUIDE2_ORIGINAL_BACKUP.md  AUTONOMOUS_DEVELOPMENT_GUIDE2_RESTRUCTURED.md  AUTONOMOUS_GUIDE_SUMMARY.md  CHANGELOG.md  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  EXTRA_PLANS.md  LEGAL.md  NOVA_ENGINE_AAA_UNIVERSAL_SPEC.md  PROGRESS.md  QUALITY_OF_LIFE_FEATURES.md  QUICK_START_GUIDE.md  README_BACKUP.md  ROADMAP.md  UNIVERSAL_PLATFORM_INTEGRATION_GUIDE.md  jest.config.cjs  package.json
oldprojectbackup/.husky/: commit-msg
oldprojectbackup/benchmarks/: BASELINE_METRICS.md  README.md  ecs-performance.bench.ts  math-operations.bench.ts  rendering.bench.ts
oldprojectbackup/config/: eslint.config.js  jest.config.js
oldprojectbackup/docs/: ARCHITECTURE.md  AUTOMATION.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_PROJECT_STATUS.md  COMPLETION_CERTIFICATE.md  COMPONENT_BREAKDOWN.md  COMPREHENSIVE_COMPLETION_SUMMARY.md  CURRENT_STATUS.md  DEVELOPMENT_GUIDE.md  DEVICE_COMPATIBILITY_MATRIX.md  ECOSYSTEM_VISION.md  ENGINE_ARCHITECTURE.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_QA_CHECKLIST.md  LOCAL_SETUP.md  MOBILE_UNIVERSAL_READINESS.md  PRODUCTION_READY_SUMMARY.md  PROGRESS.md  PROJECT_COMPLETE.md  PROJECT_ORGANIZATION.md  PROJECT_SIZE_AND_REQUIREMENTS.md  PROJECT_STRUCTURE.md  QA_CHECKLIST.md  QUICK_START.md  RELEASE_NOTES.md  SESSION_SUMMARY.md  SETUP.md  ULTIMATE_FINAL_VERIFICATION.md  USER_GUIDE.md  VERIFIED_WORKING.md  autonomis develment guide2.md
oldprojectbackup/docs/tutorials/: 02-components.md  03-materials.md  README.md
oldprojectbackup/examples/: README.md
oldprojectbackup/examples/01-hello-cube/: README.md
oldprojectbackup/scripts/: add-license-headers.js  start-platform.bat  version-bump.sh
oldprojectbackup/scripts/utils/: setup.bat  setup.sh
samples/: CMakeLists.txt
samples/hello_triangle/: hello_triangle.cpp
scripts/: start-platform.sh
src/nova/api/: CMakeLists.txt  api.cpp  api_engine.cpp  api_platform.cpp  api_security.cpp  api_services.cpp
src/nova/core/: CMakeLists.txt
src/nova/core/animation/: animation_system.cpp
src/nova/core/audio/: CMakeLists.txt  audio_system.cpp
src/nova/core/input/: CMakeLists.txt  input_system.cpp
src/nova/core/logging/: logger.cpp
src/nova/core/network/: network_system.cpp
src/nova/core/particle/: particle_system.cpp
src/nova/core/physics/: collision_shape.cpp  physics_world.cpp  rigid_body.cpp
src/nova/core/render/: render_device.cpp  render_graph.cpp
src/nova/core/render/vulkan/: vulkan_buffer.cpp  vulkan_command_buffer.cpp  vulkan_descriptor.cpp  vulkan_device.cpp  vulkan_loader.cpp  vulkan_pipeline.cpp  vulkan_resource_registry.cpp  vulkan_shader.cpp  vulkan_swap_chain.cpp  vulkan_texture.cpp
src/nova/core/resource/: CMakeLists.txt  resource_manager.cpp
src/nova/core/script/: CMakeLists.txt  script_engine.cpp
src/nova/core/types/: types.cpp
src/nova/core/ui/: ui_system.cpp
src/nova/editor/: CMakeLists.txt  editor_command.cpp  editor_context.cpp  editor_gizmo.cpp
src/nova/platform/: CMakeLists.txt  application.cpp  window.cpp
tests/: CMakeLists.txt
tests/nova/api/: test_api.cpp
tests/nova/core/: test_animation.cpp  test_audio.cpp  test_decal_system.cpp  test_deferred_renderer.cpp  test_ecs.cpp  test_global_illumination.cpp  test_gpu_compute.cpp  test_input.cpp  test_lighting.cpp  test_logging.cpp  test_material.cpp  test_math.cpp  test_memory.cpp  test_mesh_lod.cpp  test_network.cpp  test_occlusion_culling.cpp  test_particle.cpp  test_particle_gpu.cpp  test_physics.cpp  test_post_process.cpp  test_ray_tracing.cpp  test_render.cpp  test_render_graph.cpp  test_resource.cpp  test_script.cpp  test_shadow_system.cpp  test_sky_atmosphere.cpp  test_terrain.cpp  test_texture_streaming.cpp  test_types.cpp  test_ui.cpp  test_volumetric_effects.cpp  test_water.cpp
tests/nova/editor/: test_editor.cpp
tests/nova/platform/: test_platform.cpp
tools/: CMakeLists.txt
(+83 files in other folders)
